--- a/css/reset.css
+++ b/css/reset.css
@@ -47,4 +47,8 @@ table {
 }
 
 img{vertical-align:top;}
-a{text-decoration:none;}
+
+a {text-decoration: none; color: #000;}
+a:visited {text-decoration: none; color: #000;}
+a:focus {text-decoration: none;}
+a:hover, a:active {text-decoration: none;}
