--- a/css/style.css
+++ b/css/style.css
@@ -2,269 +2,45 @@
 /* CSS Document */
 
 
+.sub_container{width:1200px; margin:0 auto;	}
+.sub_container .bg_img{background:url(../images/common/sub_bgimg.jpg) no-repeat right top; height:12px; padding-bottom:42px; cursor: auto;}
 
+.sub_container .location{text-align:right; font-size:0; padding-bottom:11px;}
+.sub_container .location li{display:inline-block; font-size:12px; background:url(../images/common/sub_next.jpg) no-repeat left top 1px; padding-left:12px; margin-left:8px;}
+.sub_container .location li.first {background: none;}
+.sub_container .sub_header{background:url(../images/sub01/sub_header.jpg) no-repeat left top; height:97px; margin-bottom:47px;}
 
-/* header */
-.header{	
-	background:url(../images/common/header/gnb_bg.gif);	
-	margin-bottom:39px;
-	height:119px;
-}
 
-.header .inner_header{
-	 width:1200px;
-	 margin:0 auto;
-	 position:relative;
-	 font-size:0;
-}
 
-.header .inner_header .inner_link01{
-	height:23px;
-	padding-top:10px;
-}
 
 
-.header .inner_header .inner_link01 li{
-	float:left;
-	background:url(../images/common/header/top_line.gif) no-repeat left 2px;
-	padding-left:12px;
-	margin-right:13px;
-}
-.header .inner_header .inner_link01 .first{
-	padding-left:0;
-	background:none;
-}
 
-.header .inner_header .inner_link02{
-	position:absolute;
-	right:0;
-	top:10px;
-}
+.wrap .section {overflow: hidden; border-top: 2px solid #737373;}
+.wrap .section div {float: left; width: 239px; border-right: 1px solid #cdcdcd;}
+.wrap .section .content {position: relative; height: 372px;}
+.wrap .section .content .img {margin-top: 25px; text-align: center;}
+.wrap .section .content .text {margin-top: 15px; text-align: center;}
+.wrap .section .content .text h4 {font-size: 15px; font-weight: 700;}
+.wrap .section .content .text p {font-size: 12px; margin-top: 8px; margin-bottom: 15px;}
+.wrap .section .content .text h5 {background-color: #000; color: #fff; display: inline; font-size: 15px; padding: 5px 15px; cursor: pointer;}
+.wrap .section .content .text h5:hover {background: #fff; color: #474747; border: 2px solid;}
+.wrap .section .content .more {position: absolute; right: 0; background-color: #000; width: 30px; cursor: pointer;}
+.wrap .section.borderd {border-bottom: 2px solid #737373;}
 
-.header .inner_header .inner_link02 li{
-	float:left;
-	background:url(../images/common/header/top_line.gif) no-repeat left 2px;
-	padding-left:12px;
-	margin-left:13px;
-}
 
-.header .inner_header .inner_link02 .first{
-	padding-left:0;
-	background:none;
-}
 
 
 
-.header .top_header{
 
-}
+.wrap .page {text-align: center; overflow: hidden; margin-top: 30px; margin-bottom: 30px;}
+.wrap .page button {width: 40px; height: 40px; font-size: 12px; font-weight: 700; border: 1px solid #b4b4b4; color: #b4b4b4; line-height: 40px; margin: 0 8px; cursor: pointer;}
+.wrap .page .on {background-color: #b4b4b4; color: #fff;}
 
-.header h1{
-	margin-top:48px;
-	float:left;
-	border-bottom:solid 3px #000;
-}
 
 
 
-.header .top_header .top_menu{
-	padding-top:53px;
-	margin-left:592px;
-	height:30px;
-	border-bottom:solid 3px #000;
-}
 
-.header .top_header .top_menu li{
-	float:left;
-	background:url(../images/common/header/gnb_line.gif) no-repeat left top;
-	padding-left:34px;
-	margin-left:33px;
-}
 
-.header .top_header .top_menu .first{
-	padding-left:0;
-	margin-left:0;
-	background:none;
-}
 
 
-
-
-
-
-/* visual */
-.visual{
-	height:727px;
-	position:relative;
-	margin-bottom:83px;
-	overflow:hidden;
-}
-
-.visual .visual_bg{
-	position:absolute;
-	left:50%;
-	margin-left:-950px;
-}
-
-
-
-
-
-
-
-
-
-
-
-/* container */
-.container{
-	width:1200px;
-	margin:0 auto;
-	margin-bottom:90px;
-}
-
-.container .con_head01{
-	background:url(../images/main/main_bg01.gif) no-repeat left top;
-	height:39px;
-	margin-bottom:34px;	
-}
-
-.container .box{
-	height:253px;
-	margin:0 auto;
-	margin-bottom:33px;
-}
-
-.container .box > div{
-	width:194px;
-	height:254px;	
-	float:left;
-	margin-right:32px;
-	text-align:center;
-	color:#555;
-	font-weight:bold;
-	font-family:"Dotum";
-	line-height:25px;
-	letter-spacing:-1px;
-	word-spacing:-1px;
-}
-
-.container .box .layout05{	
-	margin-right:0;
-}
-
-.container .box .text01{
-	margin-top:12px;
-}
-
-
-
-
-
-.container .con_head02{
-	background:url(../images/main/main_bg02.gif) center top;
-	height:6px;
-	margin-bottom:38px;
-}
-
-
-
-.container .box01{
-	position:relative;
-	height:253px;
-	margin-bottom:42px;
-}
-
-.container .box01 > li{
-	float:left;
-	padding-left:78px;
-}
-
-.container .box01 .end{
-	padding-left:0;
-	margin-left:30px;
-}
-
-
-.container .box01 .img01{
-	background:url(../images/main/main_img06.png) no-repeat left top;
-	z-index:10;
-}
-
-.container .box01 .img02{
-	background:url(../images/main/main_img08.png) no-repeat right top;
-	z-index:10;
-}
-
-
-.container .box02{
-	position:relative;
-	height:253px;
-}
-
-.container .box02 > li{
- 	float:left;
-	padding-left:78px;
-}
-
-.container .box02 .end{
-	padding-left:0;
-	margin-left:30px;
-}
-
-
-
-
-/* footer */
-.footer{
-	background:#000;
-	height:200px;
-}
-
-.footer .inner_footer{
-	width:1200px;
-	height:200px;
-	background:#000;
-	margin:0 auto;
-	font-size:0;
-	
-}
-
-.footer .inner_footer .footer_link{
-	padding-top:32px;	
-	overflow:hidden;
-}
-
-.footer .inner_footer .footer_link > li{
-	float:left;	
-	background:url(../images/common/footer/footer_line.gif) no-repeat left top;
-	padding-left:20px;
-	margin-right:21px;
-}
-
-.footer .inner_footer .footer_link .first{
-	background:none;
-	padding-left:10px;
-	margin-bottom:32px;	
-}
-
-.footer .inner_footer p{
-	margin-bottom:8px;
-	margin-left:10px;
-}
-
-
-.footer .inner_footer .footer_mark{
-	margin-left:850px;
-	margin-top:-80px;
-}
-
-.footer .inner_footer .footer_sns{
-	margin-left:930px;
-	margin-top:-40px;
-}
-
-.footer .inner_footer .footer_sns > li{
-	float:left;
-	margin-left:30px;
-}
+/**/
